# Object_Detection_Model_microservice

./: README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/0013a48731354954be494c8894c92e6b/: meta.yaml
mlruns/0/0013a48731354954be494c8894c92e6b/artifacts/model/: MLmodel  model.pkl
mlruns/0/0013a48731354954be494c8894c92e6b/metrics/: mae  r2  rmse
mlruns/0/0013a48731354954be494c8894c92e6b/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/09295829a5ab4e688060c686e8097ffb/: meta.yaml
mlruns/0/09295829a5ab4e688060c686e8097ffb/artifacts/model/: MLmodel  model.pkl  python_env.yaml
mlruns/0/09295829a5ab4e688060c686e8097ffb/metrics/: mae  r2  rmse
mlruns/0/09295829a5ab4e688060c686e8097ffb/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/31b86c769c694806988860f10de4ec9d/: meta.yaml
mlruns/0/31b86c769c694806988860f10de4ec9d/artifacts/model/: MLmodel  model.pkl
mlruns/0/31b86c769c694806988860f10de4ec9d/metrics/: mae  r2  rmse
mlruns/0/31b86c769c694806988860f10de4ec9d/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/ff96010cdff045ca8ec01e3f0698abea/: meta.yaml
mlruns/0/ff96010cdff045ca8ec01e3f0698abea/artifacts/model/: MLmodel  conda.yaml
mlruns/0/ff96010cdff045ca8ec01e3f0698abea/metrics/: mae  r2  rmse
mlruns/0/ff96010cdff045ca8ec01e3f0698abea/tags/: mlflow.log-model.history  mlflow.runName
