[tool.poetry]
name = "object-detection-model-microservice"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
